Update: default hero - mobile tweaks

--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -113,7 +113,12 @@
 		position: relative;
 		z-index: 51;
 		margin-top: 150px;
-		
+		@include media($bp-small) {
+			margin-top: 5%;
+		}
+		@include media($mobile-landscape) {
+			margin-top: 5%;
+		}
 	}
 }
 
