Update: home nav fix

--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -122,7 +122,7 @@ nav.default-home-header.logo-appear.detached {
 }
 
 nav.home-header:hover {
-  background: rgba(0,0,0,1.0);
+  // background: rgba(0,0,0,1.0);
 }
 
 nav.home-header.expanded:hover {
