--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -86,11 +86,11 @@
 		}
 	}
 	@include media($bp-small) {
-		background-image: url('../images/site.jpg');
+		// background-image: url('../images/site.jpg');
 		// filter: grayscale(80%) brightness(0.6) opacity(1);
 	}
 	@include media($mobile-landscape) {
-		background-image: url('../images/site.jpg');
+		// background-image: url('../images/site.jpg');
 		// filter: grayscale(80%) brightness(0.6) opacity(1);
 	}
 }
