--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -66,7 +66,7 @@ body {
 .main-content {
 	padding: 50px 25px;
 	@include media($bp-small) {
-		padding: 40px 10px;
+		padding: 40px 10px 0;
     }
 }
 
