--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -31,7 +31,7 @@
 .services-testimonial {
 	padding: 0 70px 25px 0;
 	@include media($bp-small) {
-		padding: 0 15px 25px;
+		padding: 25px 15px 50px;
 	}
 	@include media($bp-med) {
 		padding: 25px;
