Update: image optimization plugin

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -103,8 +103,9 @@ ol {
 	font-size: modular-scale(0, 1.3rem); 
 	line-height: modular-scale(1, 1.3rem); 
 	@include media($bp-small) {
-	    font-size: modular-scale(0, 1.1rem);
-	    line-height: modular-scale(1, 1.1rem);
+	    font-size: modular-scale(0, 1rem);
+	    line-height: modular-scale(1, 1rem);
+	    padding-left: 25px;
 	}
 	@include media($mobile-landscape) {
 	    font-size: modular-scale(0, 1rem);
