--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -132,6 +132,9 @@
 .testimonial__creds {
 	text-align: right;
 	padding-right: 50px;
+	@include media($bp-small) {
+		padding-right: 20px;
+	}
 }
 
 // Project Video
