--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -55,6 +55,9 @@
   }
 }
 
+// ROTATING WORDS + SENTENCE
+// 	keeping type styles in here 
+
 .rw-wrapper{
 	// width: 80%;
 	// position: relative;
