--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -21,10 +21,9 @@
 @import "components/pushpanel";
 @import "components/animate";
 @import "components/hint";
-
+@import "components/diag-line";
 
 @import "layout/footer";
-// @import "layout/grid";
 @import "layout/header";
 @import "layout/main";
 @import "layout/sidebar";
