--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -156,7 +156,7 @@ span.black-highlight {
 	padding: 5px 10px;
 }
 
-// HERO HEADERS
+// =========================== HERO HEADERS
 
 .home-hero,
 .default-hero {
@@ -193,6 +193,10 @@ span.black-highlight {
 			font-size: modular-scale(4, 1.3rem);
 			line-height:modular-scale(4, 1.3rem);
 		}
+		@include media($mobile-landscape) {
+			font-size: modular-scale(2, 1.3rem);
+			line-height:modular-scale(2, 1.3rem);
+		}
 		@include media($bp-large) {
 			font-size: modular-scale(5, 1.2rem);
 			line-height:modular-scale(5, 1.2rem);
@@ -200,10 +204,6 @@ span.black-highlight {
 		@include media($bp-xlarge) {
 			font-size: modular-scale(6, 1.2rem);
 			line-height:modular-scale(6, 1.2rem);
-		}
-		@include media($mobile-landscape) {
-			font-size: modular-scale(2, 1.3rem);
-			line-height:modular-scale(2, 1.3rem);
 		}
 	}
 	h2,
@@ -260,6 +260,16 @@ span.black-highlight {
 		p{
 			font-family: $lite-headings;
 		}
+	}
+}
+
+.default-hero.no-banner {
+	color: $black;
+	h1 {
+		color: $black;
+		font-size: modular-scale(4);
+		line-height: modular-scale(4, 1.3rem);
+		font-family: $main-headings;
 	}
 }
 
@@ -407,6 +417,30 @@ main {
 	}
 }
 
+.main-content,
+.blog-entry {
+    blockquote {
+    	margin: 0;
+    	border-left: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(0, 1.5rem);
+			line-height: modular-scale(1, 1.5rem);
+			p {
+				font-size: modular-scale(0, 1.1rem);
+				line-height: modular-scale(1, 1.1rem);
+			}
+	    }
+    }
+    ul {
+    	margin: -15px 0 15px 0;
+    	li {
+    		padding: 7px 0;
+    	}
+    }
+}
+
+
+
 // CTAs =============================
 
 // Call to Action Panels
@@ -478,6 +512,43 @@ main {
 	}
 }
 
+// SIDEBARS =========================
+
+aside {
+    p {
+    	margin: 0;
+    	font-size: modular-scale(0, 1rem);
+    }
+    ul.post-categories {
+    	list-style-type: none;
+    	padding-left: 0;
+    	padding-bottom: 0;
+    	text-transform: uppercase;
+    	font-size: modular-scale(0, 0.9rem);
+    	line-height: modular-scale(0, 0.9rem);
+    	li {
+
+    	}
+    }
+}
+
+
+// HOME =============================
+
+
+
+// ABOUT US =========================
+
+h3.mission {
+	font-family: $main-headings;
+	font-size: modular-scale(3, 1.4rem);	
+	line-height: modular-scale(3, 1.3rem);
+	font-weight: 600;
+	color: rgba(0,0,0,0.90);
+	margin-bottom: 40px;
+	margin-top: 20px;
+}
+
 // TEAM =============================
 
 h1.team__hero-heading {
@@ -531,9 +602,6 @@ h2.team__hero-subheading {
 }
 
 .team__creds {
-	// position: absolute;
-	// bottom: 20px;
-	// right: -150px;
 	font-size: modular-scale(0);
 	line-height:modular-scale(0);
 	color: rgba(0,0,0,0.8);
@@ -544,6 +612,99 @@ h2.team__hero-subheading {
 	figcaption {
 		margin-top: 20px;
 	}
+}
+
+.drop-down-panel {
+	color: $white;
+	button {
+		color: $black;
+		background-color: $yellow;
+		border: none;
+		padding: 15px 35px;
+		margin-top: 25px;
+		font-family: $lite-headings;
+		font-size: modular-scale(1);
+		&:hover {
+			background-color: darken($yellow, 10%); 
+		}
+	}
+}
+
+// SERVICES ==========================
+
+.services-testimonial {
+	blockquote {
+		margin: 0;
+		font-style: italic;
+		font-size: modular-scale(1, 1.5rem);
+		line-height: modular-scale(1, 1.6rem);
+		font-weight: 400;
+		font-family: $lite-headings;
+		@include media($bp-small) {
+			font-size: modular-scale(1, 1.1rem);
+			line-height: modular-scale(1, 1.1rem);
+		}
+		&:before {
+		    content: '“';
+		    position: absolute;
+		    margin-left: -.4em;
+		    font-size: modular-scale(3, 1.6rem);
+		    font-family: $main-headings;
+		}
+
+		&:after {
+		    content: '”';
+		    font-family: $main-headings;
+		}
+	}
+	h4 {
+		margin: 0;
+		margin-top: 25px;
+		text-align: right;
+	}
+	h5 {
+		text-align: right;
+		margin: 0;
+	}
+	p {
+		padding-top: 20px;
+		padding-right: 20px;
+		text-align: right;
+		text-transform: uppercase;
+		font-size: modular-scale(0, 1.2rem);
+		line-height: modular-scale(0, 1.2rem);
+	}
+}
+
+.services-cta {
+	p {
+		font-family: $main-headings;
+		font-size: modular-scale(2, 1.3rem);
+		line-height: modular-scale(2, 1.3rem);
+		@include media($bp-small) {
+			font-size: modular-scale(1, 1.3rem);
+			line-height: modular-scale(1, 1.3rem);
+		}
+		@include media($mobile-landscape) {
+			font-size: modular-scale(1, 1.3rem);
+			line-height: modular-scale(1, 1.3rem);
+		}
+	}
+}
+
+.services-cta__btn {
+	font-family: $lite-headings;
+	text-transform: uppercase;
+	background-color: $black;
+	color: $white;
+	border: none;
+	font-weight: 300;
+	padding: 15px 20px;
+	font-size: modular-scale(0, 1.1rem);
+	line-height: modular-scale(0, 1.1rem);
+	border: 1px solid $black;
+	transition: all 0.5s;
+	letter-spacing: 1px;
 }
 
 // BLOG ==============================
@@ -595,6 +756,42 @@ h2.team__hero-subheading {
 	font-family: $lite-headings;
 }
 
+.full-width.full-quote { 
+	overflow-x: hidden;
+	font-family: $p-font;
+	font-style: italic;
+	font-weight: 600;
+	font-size: modular-scale(2);
+	line-height: modular-scale(3);
+	text-align: center;
+	padding: 40px 0;
+	p {
+		color: $yellow;
+		font-family: $p-font;
+		font-style: italic;
+		font-weight: 600;
+		font-size: modular-scale(2);
+		line-height: modular-scale(3);
+		text-align: center;
+	}
+	@include media($bp-large) {
+		text-align:center;
+		margin-left: -10%;
+		margin-right: -10%;
+	}
+	@include media($bp-small) {
+		font-size: modular-scale(1);
+		line-height: modular-scale(2);
+	}
+}
+
+span.big-quotes {
+	font-size: modular-scale(3);
+	line-height: modular-scale(4);
+	text-align: center;
+}
+
+
 // PROJECTS ============================
 
 .projects__panel {
@@ -619,6 +816,29 @@ h2.team__hero-subheading {
 	}
 }
 
+.projects__panel-wrap {
+	h2 {
+		position: absolute;
+		top: 30%;
+		left: 5%;
+		right: 5%;
+		text-align: center;
+		margin: 0 auto;
+		@include media($bp-small) {
+		    top: 40%;
+		}
+		@include media($bp-med) {
+		    font-size: modular-scale(3); 
+			line-height: modular-scale(3); 
+			top: 35%;
+		}
+		@include media($bp-large) {
+		    font-size: modular-scale(5); 
+			line-height: modular-scale(5); 
+		}
+	}
+}
+
 span.stats_label,
 span.bolded-text {
 	font-family: $bold-font;
@@ -629,31 +849,6 @@ span.bolded-text {
 	line-height: modular-scale(0,1.2rem);
 	margin-bottom: 10px;
 	font-weight: 200;
-}
-
-// CONTACT
-
-#info-window-content {
-	// background-color: $yellow;
-	h3 {
-		color: $black;
-		font-size: modular-scale(2, 1rem);
-		margin: 0;
-		@include media($bp-small) {
-			font-size: modular-scale(1, 1rem);
-			line-height: modular-scale(1, 1rem);
-		}
-	}
-	p {
-		font-family: $main-headings;
-		font-size: modular-scale(1, 1rem);
-		line-height: modular-scale(1, 1.3rem);
-		margin-bottom: 0;
-		@include media($bp-small) {
-			font-size: modular-scale(0, 1rem);
-			line-height: modular-scale(0, 1.3rem);
-		}
-	}
 }
 
 .project__testimonial {
@@ -678,4 +873,149 @@ span.bolded-text {
 		}
 	}
 }
+
+// SINGLE PROJECT ============================
+
+// Project Testomonial
+
+.project__testimonial {
+	@include media($bp-small) {
+		font-size: modular-scale(2);
+	}
+	@include media($mobile-landscape) {
+		font-size: modular-scale(2);
+	}
+	blockquote {
+		color: $white;
+		&:before {
+		    content: '“';
+		    position: absolute;
+		    margin: 10px -0.5em;
+		    font-size: modular-scale(6, 1.8rem);
+		    color: rgba(255,255,255,0.3);
+		    @include media($bp-small) {
+		    	font-size: modular-scale(5);
+		    	margin: 10px -0.5em;
+		    }
+		}
+		&:after {
+		    content: '”';
+		    font-size: modular-scale(2, 1.3rem);
+		    color: rgba(255,255,255,0.3);
+		    @include media($bp-small) {
+		    	font-size: modular-scale(1);
+		    }
+		}
+	}
+}
+
+.project-nav__arrow {
+	p {
+		margin: 0;
+		font-family: $main-headings;
+	}
+}
+
+// CONTACT ===================================
+
+#info-window-content {
+	// background-color: $yellow;
+	h3 {
+		color: $black;
+		font-size: modular-scale(2, 1rem);
+		margin: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(1, 1rem);
+			line-height: modular-scale(1, 1rem);
+		}
+	}
+	p {
+		font-family: $main-headings;
+		font-size: modular-scale(1, 1rem);
+		line-height: modular-scale(1, 1.3rem);
+		margin-bottom: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(0, 1rem);
+			line-height: modular-scale(0, 1.3rem);
+		}
+	}
+}
+
+.contact__single {
+	h4 {
+		margin-bottom: 10px;
+	}
+	p {
+		margin-bottom: 15px;
+		font-size: modular-scale(0, 1.3rem);
+		line-height: modular-scale(1, 1.3rem);
+	}
+	button {
+		padding: 10px 15px;
+		color: $d-grey;
+		margin-top: 20px;
+		background-color: $yellow;
+		border: none;
+		&:hover {
+			background-color: $black;
+			color: $yellow;
+			border: none;
+		}
+	}
+}
+
+//  FOOTER ====================================
+
+.main-footer {
+	color: $white;
+	a {
+		color: $yellow;
+	}
+}
+
+.footer__third {
+	h3 {
+		font-family: $lite-headings;
+		margin-bottom: 10px;
+		text-transform: uppercase;
+	}
+	p {
+		margin-bottom: 5px;
+		font-size: modular-scale(0, 1.2rem);
+		font-family: $lite-headings;
+	}
+}
+
+#mc-embedded-subscribe-form.footer-newsletter {
+	padding: 0;
+}
+
+.footer__cta {
+	h4 {
+		font-family: $lite-headings;
+	}
+	button {
+		color: $black;
+		background-color: $yellow;
+		padding: 10px 15px;
+		font-family: $lite-headings;
+		border: 0;
+		margin: 20px 0;
+		&:hover {
+			background-color: $d-grey;
+		}
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
