Update: table of contents

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -1,4 +1,23 @@
-// Modular scale is in relation to 1.2rem = 22px
+// TABLE OF CONTENTS
+
+	// GLOBAL
+	// HERO HEADERS
+	// MAIN
+	// SIDEBARS
+	// HOME
+	// ABOUT US
+	// TEAM
+	// SERVICES
+	// BLOG
+	// PROJECTS
+	// SINGLE PROJECTS
+	// CONTACT
+	// FOOTER
+
+// ============================================================
+
+// GLOBAL
+// Modular scale is in relation to 1.5rem = 24px
 body {
 	// color: $d-grey;
 	color: #444;
@@ -156,7 +175,7 @@ span.black-highlight {
 	padding: 5px 10px;
 }
 
-// =========================== HERO HEADERS
+// HERO HEADERS =========================== 
 
 .home-hero,
 .default-hero {
