--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -34,26 +34,38 @@
 		height: 200%;
 	}
 	@include media($bp-large) {
-		top: 0;
+		top: -160px;
 		left: 0;
-		width: 115%;
-		height: 115%;
+		width: 150%;
+		height: 150%;
+	}
+	@include media($bp-xlarge) {
+		top: -200px;
+		left: -200px;
+		width: 135%;
+		height: 135%;
+	}
+	@include media($bp-xxlarge) {
+		top: -200px;
+		left: -200px;
+		width: 135%;
+		height: 135%;
 	}
 }
 
-@media (min-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    height: 300%;
-    top: -100%;
-  }
-}
+// @media (min-aspect-ratio: 16/9) {
+//   .fullscreen-bg__video {
+//     height: 300%;
+//     top: -100%;
+//   }
+// }
 
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: 300%;
-    left: -100%;
-  }
-}
+// @media (max-aspect-ratio: 16/9) {
+//   .fullscreen-bg__video {
+//     width: 300%;
+//     left: -100%;
+//   }
+// }
 
 // ROTATING WORDS + SENTENCE
 // 	keeping type styles in here 
@@ -106,8 +118,14 @@ h2.rw-sentence{
 	@include media($bp-xlarge) {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: modular-scale(4); 
-		line-height: modular-scale(4);
+	    font-size: modular-scale(5); 
+		line-height: modular-scale(5);
+	}
+	@include media($bp-xxlarge) {
+		margin: 0 8%;
+		text-align: left;
+	    font-size: modular-scale(6); 
+		line-height: modular-scale(6);
 	}
 	@include media($mobile-landscape) {
 		margin: 0 0 0 20px;
@@ -136,6 +154,12 @@ h2.rw-sentence{
 	}
 	@include media($bp-large) {
 		padding-left: 470px;
+	}
+	@include media($bp-xlarge) {
+		padding-left: 610px;
+	}
+	@include media($bp-xxlarge) {
+		padding-left: 810px;
 	}
 	@include media($mobile-landscape) {
 		padding-left: 230px;
