Update: safari tweak

--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -6,7 +6,7 @@
     @include media($bp-small) {
       display: none;
     }
-    @include media($bp-xlarge) {
+    @include media($bp-xxlarge) {
       max-height: 250px; 
       width: auto;
     }
