--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -7,7 +7,7 @@
       display: none;
     }
     @include media($bp-xxlarge) {
-      max-height: 250px; 
+      max-height: 200px; 
       width: auto;
     }
     @include media($mobile-landscape) {
@@ -377,8 +377,8 @@ nav.default-home-header.expanded #navigation ul {
       z-index: 390;
     }
     @include media($bp-xxlarge) {
-      font-size: modular-scale(5);
-      line-height: modular-scale(5);
+      font-size: modular-scale(5, 1.3rem);
+      line-height: modular-scale(5, 1.3rem);
       z-index: 390;
     }
     ul {
@@ -440,7 +440,7 @@ nav.expanded #navigation {
   }
   @include media($bp-xxlarge) {
     position: relative;
-    top: 50px;
+    top: 10px;
     right: 55px;
     z-index: 1000 !important;
   }
