Update: 80vh for default hero headers  xxlarge BP

--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -6,6 +6,12 @@
 	}
 }
 
+#info-window-content {
+	@include media($bp-xxlarge) {
+		padding: 20px;
+	}
+}
+
 .contact-container {
 	@include display(flex);
 	@include align-items(flex-start);
