--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -59,6 +59,9 @@
 	width: 100%;
 	min-height: 100vh;
 	position: relative;
+	@include media($bp-xxlarge) {
+		min-height: 80vh;
+	}
 	figure {
 		position: absolute;
 		top: 0;
