Update: blockquote tweak

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -731,7 +731,7 @@ h2.team__hero-subheading {
 .blog-entry {
 	blockquote {
 		font-family: $title-font;
-		border-left: 4px solid $yellow;
+		// border-left: 4px solid $yellow;
 		padding-left: 20px;
 		font-size: modular-scale(1);
 		line-height: modular-scale(2);
