--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -659,6 +659,14 @@ h2.team__hero-subheading {
 		line-height: modular-scale(1, 1.6rem);
 		font-weight: 400;
 		font-family: $p-font;
+		p {
+			font-style: italic;
+			font-size: modular-scale(1, 1.5rem);
+			line-height: modular-scale(1, 1.6rem);
+			font-weight: 400;
+			font-family: $p-font;
+			text-transform: none;
+		}
 		@include media($bp-small) {
 			font-size: modular-scale(1, 1.1rem);
 			line-height: modular-scale(1, 1.1rem);
@@ -688,7 +696,7 @@ h2.team__hero-subheading {
 		text-align: right;
 		margin: 0;
 	}
-	p {
+	p.testimonial__caption {
 		font-family: $lite-headings;
 		padding-top: 5px;
 		padding-left: 100px;
@@ -697,6 +705,11 @@ h2.team__hero-subheading {
 		font-size: modular-scale(0, 0.9rem);
 		line-height: modular-scale(0, 1rem);
 	}
+}
+
+#space-uptop {
+	padding-top: 15px;
+	margin-bottom: 0;
 }
 
 .services-cta {
