--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -1,5 +1,5 @@
 .two-column {
-	margin: 60px -20%;
+	margin: 60px -25% 60px -20%;
 	@include display(flex);
 	@include align-items(flex-start);
 	@include justify-content(center);
@@ -37,6 +37,9 @@
 	@include media($mobile-landscape) {
 		padding: 0 15px 25px;
 	}
+	@include media($bp-large) {
+		@include flex(0 0 60%);
+	}
 }
 
 .services-cta {
@@ -44,6 +47,9 @@
 	padding: 40px;
 	@include media($bp-small) {
 		padding: 30px;
+	}
+	@include media($bp-large) {
+		@include flex(0 0 40%);
 	}
 	@include media($mobile-landscape) {
 		padding: 30px;
