--- a/custom/themes/ingenuity/src/sass/layout/_footer.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_footer.scss
@@ -47,7 +47,7 @@ form.footer-newsletter {
 		border-radius: 0;
 		border: 2px solid $white;
 		color: $white;
-		font-weight: normal;
+		font-weight: bold;
 		width: 300px;
 		width: 35%;
 		min-width: 70%;
@@ -238,7 +238,7 @@ form.footer-newsletter {
 	border-radius: 0;
 	border: 2px solid $white;
 	color: $white;
-	font-weight: normal;
+	font-weight: bold;
 	min-width: 70%;
 	padding: 10px;
 	min-height: 60px;
