--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -13,7 +13,7 @@
 	width: 100%;
 	transition: all 0.2s;
 	&:hover .projects__panel-wrap .projects__panel-img { 
-		filter: grayscale(0.0);
+		filter: grayscale(0.2);
 		background-blend-mode: normal;
 		filter: brightness(0.3);
 	}
@@ -40,22 +40,23 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		transition: all 0.2s;
+		// transition: all 0.2s;
 		padding: 25px;
 		filter: grayscale(0.0);
-		background-blend-mode: overlay;
+		filter: brightness(70%);
+		background-blend-mode: hard-light;
 		@include display(flex);
 		@include align-items(center);
 		@include justify-content(center);
 		.color-overlay {
-			width: 100%;
-			height: 100%;
-			background-color: rgba(252, 216, 56, 0.4);
-			filter: brightness(0.6);
-			position: absolute;
-			top: 0;
-			left: 0;
-			transition: all 0.2s;
+			// width: 100%;
+			// height: 100%;
+			// background-color: rgba(252, 216, 56, 0.4);
+			// filter: brightness(70%);
+			// position: absolute;
+			// top: 0;
+			// left: 0;
+			// transition: all 0.2s;
 		}
 	}
 }
